<resources>
    <string name="app_name">Both</string>
    <string name="client_id">548723226855110</string>
    <string name="callback_url">https://both.social/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="http">http://</string>
    <string name="domain">both.com</string>
    <string name="profile">profile</string>
    <string name="person">person</string>
    <string name="fcm_title">¡Tienes un nuevo like de %1$s!</string>
    <string name="fcm_expDate_title">¡Tu Cita Express esta lista!</string>
    <string name="fcm_title2">¡Tienes un nuevo like de %1$s...</string>
    <string name="fcm_expDate_body">Échale un vistazo al perfil de %1$s</string>
    <string name="fcm_body">¿Qué esperas para hacer Match?</string>
    <string name="fcm_body2">y de %1$s personas más!</string>
    <string name="persons_today">persons_today</string>
    <string name="contacts">contacts</string>
    <string name="full">full</string>
    <string name="match">match</string>
    <string name="like">like</string>
    <string name="mylike">megusta</string>
    <string name="dislike">dislike</string>
    <string name="actions">actions</string>
    <string name="reload">reload</string>
    <string name="errors">errors</string>
    <string name="version">version</string>
    <string name="device">device</string>
    <string name="url">url</string>
    <string name="time">time</string>
    <string name="error_type">error_type</string>
    <string name="keys">keys</string>
    <string name="json">json</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="images">images</string>
    <string name="user_id">user_id</string>
    <string name="post">post</string>
    <string name="comment">comment</string>
    <string name="likes_today">likes_today</string>
    <string name="from_id">from_id</string>
    <string name="to_id">to_id</string>
    <string name="reason">reason</string>
    <string name="auth">auth</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="pass">pass</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="server">server</string>
    <string name="public_key">public_key</string>
    <string name="uuid">uuid</string>
    <string name="birth">birth</string>
    <string name="city">city</string>
    <string name="ciudad">Ciudad</string>
    <string name="gender">gender</string>
    <string name="search_by">search_by</string>
    <string name="orientation">orientation</string>
    <string name="show_orientation">show_orientation</string>
    <string name="preferences">preferences</string>
    <string name="occupation">occupation</string>
    <string name="about_me">about_me</string>
    <string name="survey">survey</string>
    <string name="social_networks">social_networks</string>
    <string name="premium">premium</string>
    <string name="start_date">start_date</string>
    <string name="end_date">end_date</string>
    <string name="test_period">test_period</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="question1">question1</string>
    <string name="question2">question2</string>
    <string name="question3">question3</string>
    <string name="type">type</string>
    <string name="is_new">is_new</string>
    <string name="cant_photos">cant_photos</string>
    <string name="last_update">last_update</string>
    <string name="photo_upload">is_photo_upload</string>
    <string name="public_photo">public</string>
    <string name="setup_complete">is_setup_complete</string>
    <string name="date_birth">Fecha de Nacimiento</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="day">day</string>
    <string name="pending_updates">pending_updates</string>
    <string name="pending_in_messages">pending_in_messages</string>
    <string name="photo_path">/photos/</string>
    <string name="jpeg">.jpeg</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>
    <string name="save">Guardar</string>
    <string name="work">work</string>
    <string name="study">study</string>
    <string name="work_center">work_center</string>
    <string name="study_center">study_center</string>
    <string name="job">job</string>
    <string name="course">course</string>
    <string name="address">address</string>
    <string name="config">config</string>
    <string name="instagram">instagram</string>
    <string name="facebook_app_id">347015220868982</string>
    <string name="facebook_client_token">919fae7bb068261d089e659b97358b5a</string>
    <string name="fb_login_protocol_scheme">fb1275048103013546</string>
    <string name="sobre_mi">Sobre mí</string>
    <string name="cuentanos_como_eres">Cuéntanos como eres</string>
    <string name="cita_express">Cita Express</string>
    <string name="cita_express_info">Tienes 24 horas para conocer a tu cita. Si decides que te gusta dale un buen like.</string>
    <string name="chequear_perfil">Chequear perfil</string>
    <string name="mas_tarde">Más tarde</string>
    <string name="tienes_un_match">Tienes un Match</string>
    <string name="enviar_un_mensaje">Enviar un mensaje</string>
    <string name="quizas_luego">Quizás luego</string>
</resources>