<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/comforta_bold"
        android:text="@string/sobre_mi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_bold"
        android:text="@string/save"
        android:textColor="@color/redSecundary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/aboutTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutTitle" />

    <EditText
        android:lineSpacingMultiplier="1.15"
        android:id="@+id/editAbout"
        android:paddingTop="5dp"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back_15dp"
        android:backgroundTint="@color/graySSLite"
        android:fontFamily="@font/comforta_bold"
        android:gravity="start"
        android:hint="@string/cuentanos_como_eres"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="gravity"
        android:maxLength="500"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>