<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ExpDateActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/stylescript_regular"
                android:text="@string/cita_express"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="60dp"
                app:layout_constraintBottom_toTopOf="@id/image" />

            <ImageView
                android:id="@+id/svg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/ic_express_date_svg"
                android:translationZ="-2dp"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintLeft_toLeftOf="@id/image"
                app:layout_constraintRight_toRightOf="@id/image"
                app:layout_constraintTop_toTopOf="@id/image" />

            <View
                android:id="@+id/imageBack"
                android:layout_width="152dp"
                android:layout_height="152dp"
                android:background="@drawable/yellow_circle_gradient"
                android:translationZ="-3dp"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintLeft_toLeftOf="@id/image"
                app:layout_constraintRight_toRightOf="@id/image"
                app:layout_constraintTop_toTopOf="@id/image" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_user_placeholder"
                android:translationZ="-2dp"
                app:civ_border="true"
                app:civ_border_color="@color/white"
                app:civ_border_width="4dp"
                app:layout_constraintBottom_toTopOf="@id/info"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="90dp"
                android:fontFamily="@font/comforta_bold"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/cita_express_info"
                android:textAlignment="center"
                android:textSize="18sp"
                android:translationZ="-2dp"
                app:layout_constraintBottom_toTopOf="@id/checkP" />

            <TextView
                android:id="@+id/checkP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:background="@drawable/yellow_gradient"
                android:fontFamily="@font/comforta_bold"
                android:paddingStart="25dp"
                android:paddingTop="7dp"
                android:paddingEnd="25dp"
                android:paddingBottom="10dp"
                android:text="@string/chequear_perfil"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@id/later"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/comforta_bold"
                android:onClick="close"
                android:paddingTop="7dp"
                android:paddingBottom="10dp"
                android:text="@string/mas_tarde"
                android:textAlignment="center"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</ScrollView>