<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".MatchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:translationZ="-1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="9:16"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/heart_match"
            app:lottie_speed="0.50" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/stylescript_regular"
            android:text="@string/tienes_un_match"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60dp"
            app:layout_constraintBottom_toTopOf="@id/myImage" />


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/matchImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="20dp"
            android:translationZ="-2dp"
            app:civ_border="false"
            app:layout_constraintBottom_toTopOf="@id/info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/myImage" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/myImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:translationZ="-2dp"
            app:civ_border="false"
            app:layout_constraintBottom_toTopOf="@id/info"
            app:layout_constraintLeft_toRightOf="@id/matchImage"
            app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="110dp"
            android:fontFamily="@font/comforta_bold"
            android:lineSpacingMultiplier="1.2"
            android:text="Tú y Zara se han dado like el uno al otro."
            android:textAlignment="center"
            android:textSize="18sp"
            android:translationZ="-2dp"
            app:layout_constraintBottom_toTopOf="@id/chat" />

        <TextView
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:background="@drawable/gradient_button"
            android:fontFamily="@font/comforta_bold"
            android:onClick="chatting"
            android:paddingTop="7dp"
            android:paddingBottom="10dp"
            android:text="@string/enviar_un_mensaje"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@id/later"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comforta_bold"
            android:onClick="close"
            android:paddingTop="7dp"
            android:paddingBottom="10dp"
            android:text="@string/quizas_luego"
            android:textAlignment="center"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>